tests/NormalTests/paczka1/small_fuzzy/82922346.err
Error in line 1: d3EN0NJPLBn S523 62,3
Error in line 5: o9l2Cb8sr S965 55,2
Error in line 6: d3EN0NJPLBn S237 3,0
Error in line 7: o9l2Cb8sr S237 18,4
Error in line 8: d3EN0NJPLBn S965 13,6
Error in line 11: S237 A333 67,4
